# octavec

./: .gitignore  README.md
octave-xmpl/: AUTHORS  Makefile.am  Makefile.octave-front  README  configure.ac  octave.m4  octavecxt.m4
octave-xmpl/mat2c-benchmark/: Makefile.am  README  adapt.m  crnich.m  drv_adapt.m  drv_capacitor.m  drv_closure.m  drv_crnich.m  drv_diffraction.m  drv_dirich.m  drv_editdist.m  drv_fdtd.m  drv_finediff.m  drv_nbody1d.m  drv_nbody3d.m  nbody3d.m  parse-input-check.src  tridiagonal.m
octave-xmpl/xmpl/: Makefile.am  addv.m  addv_tb.m  addv_tb.ti  constants.m  constants_tb.m  cross_tb.m  cuatro.m  dos.m  drv_fir_main.m  drv_iir_main.m  drv_pureba_main.m  drv_simple_main.m  fac.m  factorial_tb.m  fir.m  fir_tb.m  iir.m  iir_tb.m  matrix_tb.m  oo.m  parse-input-check.src  prueba.m  prueba_tb.m  qzhess_tb.m  simple.m  simple_tb.m  sintax.m  sintax_tb.m  subscripts_tb.m  syntax-main.tbm  syntax.m  syntax_tb.m  test.m  test_tb.m  tres.m  uno.m  uno_tb.m
octave-xmpl/xmpl/dvbt-xmpl/: Makefile.am  bit_from_byte_vector.m  byte_from_bit_vector.m  byte_xor.m  channel_model.m  convolutional_decode.m  convolutional_encode.m  demo_head.mpg  depuncturing.m  dvbt-main.ast  dvbt-main.sa  dvbt-main.tbm  dvbt-main.tc  dvbt-main.txt  dvbt-main.tyd  dvbt.m  dvbt_receive.m  dvbt_send.m  dvbt_tb.m  global_settings.m  lib-functions  outer_deinterleave.m  outer_interleave.m  prbs_sequence.m  remove_sync_and_unscramble.m  rs_decode.m  rs_encode.m  sample_rate_conversion.m  sync_and_scramble.m
octave-xmpl/xmpl/dvbt2-xmpl/: He.m  Makefile.am  bit_from_byte_vector.m  byte_from_bit_vector.m  byte_xor.m  convolutional_decode.m  convolutional_encode.m  convolutional_encode_tb.m  demap.m  digital_frontend.m  dvbt-main.ast  dvbt-main.tbm  dvbt_receive.m  dvbt_send.m  dvbt_tb.m  gain_control.m  gf_add.m  gf_init.m  gf_mul.m  global_settings.m  inner_deinterleave.m  inner_interleave.m  inner_interleave_tb.m  insert_reference_signals.m  map.m  map_tb.m  ofdm_decode.m  ofdm_encode.m  outer_deinterleave.m  outer_interleave.m  outer_interleave_tb.m  parse-input-check.src  prbs_sequence.m  puncturing.m  reference_signals_tb.m  remove_reference_signals.m  remove_sync_and_unscramble.m  rs_encode.m  rs_init.m  soft_xor.m  (+2 more)
octave-xmpl/xmpl2/: Makefile.am  addv-main.ast  addv-main.tbm  addv.m  addv_tb.m  cinco.m  complex_func.m  constants-main.ast  constants-main.tbm  constants.m  constants_tb.m  convolutional_encode-main.ast  cuatro.m  dos.m  drv_ex1_main.m  drv_sencillo_main.m  dvbt1-main.ast  ex1-main.ast  ex1types.m  ex1types_tb.m  factorial.m  fir-main.ast  fir_tb.m  for_test.m  if.m  if_test.m  if_testBreak.m  iir-main.ast  iir.m  iir_tb.m  inner_interleave-main.ast  map-main.ast  multiple_args.m  ofdm-main.ast  parse-input-check  parse-input-check.src  prueba-main.ast  prueba.m  prueba_tb.m  reference_signals-main.ast  (+22 more)
octave-xmpl/xmpl3/: ArnoldiC.m  Makefile.am  MathLec.m  MathLec.out  MathLec.txt  MathLecB.m  MathLecC.m  Octave2.m  asd.m  cell_tb.m  change.m  chebseries.m  clock_tb.m  compare_tb.m  cone.m  cone_tb.m  cover.m  cover1.m  cover_tb.m  cross_tb.m  eval.m  f1.m  f1_tb.m  fac.m  fac_tb.m  factorial-main.tbm  factorial.m  factorial_tb.m  fractal.m  fractal2.m  gcd2.m  list_primes_tb.m  mat1.m  mat2.m  mat3.m  matrix.m  mf.m  multiple.m  multiple_tb.m  parse-input-check.src  (+27 more)
octave-xmpl/xmpl3/image/: a.m  blur_test.m  convolve.m  convolve_rgb.m  gauss_blur.m  gauss_blur_rgb.m  gauss_kernel.m  gaussian_blur.m  get_pixel.m  give_edge.m  imread.m  imwrite.m  in_diff1.m  in_diff2.m  mono.m  mono1.m  mono2.m  octave
octave-xmpl/xmpl3/manual/: blanks.m  complex1.m  deblank.m  dec2bin.m  dec2hex.m  findstr.m  hex2dec.m  index.m  index1.m  int2str.m  isalpha.m  range1.m  range2.m  range3.m  rindex.m  setstr.m  simple1.m  split.m  strcat.m  string1.m  string2.m  strrep.m  struct1.m  struct2.m  substr.m  toascii.m  tolower.m  toupper.m
octave-xmpl/xmpl3/manual/global/: function_with_global.m  function_without_global.m  global1.m  global2.m  global3.m
octave-xmpl/xtc/: Makefile.am  octave-xmpl.str
octavec/trunk/: Makefile.am  Makefile.octave  bootstrap  builtin.ti  configure.ac
octavec/trunk/doc/: Makefile.am  book.xml  gpl-copyright.xml  octavec.xml
octavec/trunk/loop-opt/: Makefile.am  Octave-Collect-Statements.str  Octave-ControlFlow.str  Octave-Dependence-Testing.str  Octave-Dependence.str  Octave-I-Test.str  Octave-IVS.str  Octave-IVexp-Norm.str  Octave-Loop-Forward-Subst.str  Octave-MIV.str  Octave-New-Norm.str  Octave-Normalize-Loop.str  Octave-SIV.str  Octave-Vectorize-Statement.str  Octave-Vectorize.str  Octave-ZIV.str
octavec/trunk/loop-opt/eval/: Eval-Int-Expressions.str  Makefile.am
octavec/trunk/loop-opt/testfiles/: not_norm.m  stride.m  test.m  test1.m  test2.m  test3.m  test4.m
octavec/trunk/src/: Makefile.am  o2c.str  oct.str  octave-eval.str
octavec/trunk/syntax/: Makefile.am
octavec/trunk/temp/: Explain-Errors.str  Octave-FunctionsInUse.str  Octave-IncludeTypeInfo.str  Octave-SetTypes.str  Octave-TC.str  Octave-TCSystem.str  Record-Insertion-Test.str  TC-Assignments.str  TC-Calls.str  TC-Cell.str  TC-CommonLib.str  TC-Conversions.str  TC-DefFunctionShape.str  TC-EvalFunction.str  TC-Expressions.str  TC-FieldVar.str  TC-Functions.str  TC-MExpansion.str  TC-Matrix.str  TC-PartialTypes.str  TC-Statements.str  TC-Subscript.str  TC-TypeMatching.str
octavec/trunk/test/: Makefile.am  cat_matrix.m  cellindex.m  constant_initialization.m  constant_initialization_ans.m  constant_propagation.m  for_test.m  if_test.m  multiple_assignment.m  structs.m  subscript.m
old/insn/: AUTHORS  Makefile.am  Makefile.insn  NEWS  bootstrap  configure.in
old/insn/pp/: INSN-pretty.pp  INSN.pp  Makefile.am
old/insn/sig/: Insn-Comment.str  Insn-Lexicals.str  Insn-Literals.str  Insn-Operators.str  Insn-Types.str  Insn-Whitespace.str  Insn-extra.str  Insn.str  Makefile.am
old/insn/syn/: Makefile.am
old/insn/xtc/: Makefile.am  parse-insn.str  pp-insn.str
old/octave2insn/trunk/: ChangeLog  Makefile.am  Makefile.octave2insn  README  bootstrap  configure.in
(+180 files in other folders)
