include $(top_srcdir)/Makefile.xt
include $(top_srcdir)/Makefile.octave-front

SUBDIRS           = xmpl xmpl2 xmpl3 mat2c-benchmark xtc
DIST_SUBDIRS      = $(SUBDIRS)
BOOTCLEAN_SUBDIRS = $(SUBDIRS)
EXTRA_DIST        = bootstrap Makefile.xt Makefile.octave-front octave.m4 octavecxt.m4


ACLOCAL_AMFLAGS = -I .