# Copyright (C) 2000-2001 Eelco Visser <visser@acm.org>
# 
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
# 02111-1307, USA.

AC_INIT([octave2insn],[0.1],[stratego-bugs@cs.uu.nl])  
AM_INIT_AUTOMAKE

USE_XT_PACKAGES 

AC_ARG_WITH(insn,
  AC_HELP_STRING([--with-insn=DIR], [use INSN package at DIR @<:@prefix@:>@]),
  INSN="$withval",
  INSN="$prefix")
AC_SUBST(INSN)
 
AC_ARG_WITH(octave-front,
  AC_HELP_STRING([--with-octave-front=DIR], [use Octave Front at DIR @<:@prefix@:>@]),
  OCTAVE_FRONT="$withval",
  OCTAVE_FRONT="$prefix")
AC_SUBST(OCTAVE_FRONT)

OCTAVE_INSN=${prefix}
AC_SUBST(OCTAVE_INSN)



AC_PROG_CC
AC_PROG_INSTALL

AC_CONFIG_FILES([
        Makefile
        README
        syn/Makefile
	trans/Makefile 
	xtc/Makefile
])
AC_OUTPUT




